prefetch-dependencies: Unify task description everywhere
This patch updates all prefetch-dependencies task descriptions to
the same line for consistency without unnecessary links. The "YAML in
Markdown in YAML" format is absurd.

Unfortunately, the README.md file in the `oci-ta` variant is
automatically generated by some script, so the configuration section is
deleted.

Signed-off-by: Michal Šoltis <msoltis@redhat.com>

--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/base.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/base.yaml
@@ -8,9 +8,7 @@ metadata:
     tekton.dev/tags: "image-build, hacbs"
   name: prefetch-dependencies
 spec:
-  description: |-
-    Task that uses Hermeto to prefetch build dependencies.
-    See docs at https://hermetoproject.github.io/hermeto/#basic-usage
+  description: Task that prefetches project dependencies for hermetic build.
   params:
   - description: Configures project packages that will have their dependencies prefetched.
     name: input
