--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/recipe.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/recipe.yaml
@@ -21,11 +21,7 @@ additionalSteps:
         echo -n "${SOURCE_ARTIFACT}" > $(results.SOURCE_ARTIFACT.path)
         echo -n "" > $(results.CACHI2_ARTIFACT.path)
       fi
-description: |-
-    Task that uses Hermeto to prefetch build dependencies. The fetched dependencies and the
-    application source code are stored as a trusted artifact in the provided OCI repository.
-    For additional info on Hermeto, see docs at
-    https://hermetoproject.github.io/hermeto/#basic-usage
+description: Task that prefetches project dependencies for hermetic build.
 preferStepTemplate: true
 removeWorkspaces:
   - source
