--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/ta.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/ta.yaml
@@ -9,11 +9,7 @@ metadata:
     tekton.dev/tags: "image-build, hacbs"
   name: prefetch-dependencies-oci-ta
 spec:
-  description: |-
-    Task that uses Hermeto to prefetch build dependencies. The fetched dependencies and the
-    application source code are stored as a trusted artifact in the provided OCI repository.
-    For additional info on Hermeto, see docs at
-    https://hermetoproject.github.io/hermeto/#basic-usage
+  description: Task that prefetches project dependencies for hermetic build.
   params:
   - description: Configures project packages that will have their dependencies prefetched.
     name: input
