--- a/task/buildah-min/0.8/buildah-min.yaml
+++ b/task/buildah-min/0.8/buildah-min.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: 0.7.1
+    app.kubernetes.io/version: "0.8"
     build.appstudio.redhat.com/build_type: docker
   name: buildah-min
 spec:
