--- a/task/buildah-remote/0.8/buildah-remote.yaml
+++ b/task/buildah-remote/0.8/buildah-remote.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/tags: image-build, konflux
   creationTimestamp: null
   labels:
-    app.kubernetes.io/version: 0.7.1
+    app.kubernetes.io/version: "0.8"
     build.appstudio.redhat.com/build_type: docker
   name: buildah-remote
 spec:
