--- a/task/buildah-min/0.8/buildah-min.yaml
+++ b/task/buildah-min/0.8/buildah-min.yaml
@@ -252,6 +252,7 @@ spec:
   stepTemplate:
     computeResources:
       limits:
+        cpu: "1"
         memory: 2Gi
       requests:
         cpu: 100m
