Fix versioning checks

--- a/renovate.json
+++ b/renovate.json
@@ -93,7 +93,9 @@
         "external-task/sast-unicode-check/**",
         "stepactions/fips-operator-check-step-action/**",
         "task/fbc-fips-check-oci-ta/**",
+        "task/fbc-fips-check-worker-oci-ta/**",
         "task/fbc-fips-check/**",
+        "task/fbc-fips-prepare-oci-ta/**",
         "task/fbc-target-index-pruning-check/**",
         "task/fips-operator-bundle-check-oci-ta/**",
         "task/fips-operator-bundle-check/**",
