Add env var support in buildah task
Users can now add env variables and these will be passed to the buildah command and injected.
These env variables are now also correctly parsed by dockerfile-json.

STONEBLD-3890

Signed-off-by: mkosiarc <mkosiarc@redhat.com>

--- a/task/buildah-remote-oci-ta/0.8/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.8/buildah-remote-oci-ta.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/tags: image-build, konflux
   creationTimestamp: null
   labels:
-    app.kubernetes.io/version: "0.8"
+    app.kubernetes.io/version: 0.8.1
     build.appstudio.redhat.com/build_type: docker
   name: buildah-remote-oci-ta
 spec:
@@ -86,6 +86,10 @@ spec:
     description: Name of secret which contains the entitlement certificates
     name: ENTITLEMENT_SECRET
     type: string
+  - default: []
+    description: Array of --env values ("env=value" strings)
+    name: ENV_VARS
+    type: array
   - default: "false"
     description: Determines if build will be executed without network access.
     name: HERMETIC
@@ -362,6 +366,8 @@ spec:
   - args:
     - --build-args
     - $(params.BUILD_ARGS[*])
+    - --env
+    - $(params.ENV_VARS[*])
     - --labels
     - $(params.LABELS[*])
     - --annotations
@@ -582,6 +588,7 @@ spec:
       echo 'root:1:4294967294' | tee -a /etc/subuid >>/etc/subgid
 
       build_args=()
+      env_vars=()
       if [ -n "${BUILD_ARGS_FILE}" ]; then
         # Parse BUILD_ARGS_FILE ourselves because dockerfile-json doesn't support it
         echo "Parsing ARGs from $BUILD_ARGS_FILE"
@@ -619,6 +626,14 @@ spec:
             shift
           done
           ;;
+        --env)
+          shift
+          # Collect env entries of the form KEY=value
+          while [[ $# -gt 0 && $1 != --* ]]; do
+            env_vars+=("$1")
+            shift
+          done
+          ;;
         --labels)
           shift
           while [[ $# -gt 0 && $1 != --* ]]; do
@@ -645,6 +660,11 @@ spec:
         BUILD_ARG_FLAGS+=("--build-arg=$build_arg")
       done
 
+      ENV_FLAGS=()
+      for env_var in "${env_vars[@]}"; do
+        ENV_FLAGS+=("--env=$env_var")
+      done
+
       # Dockerfile-json cannot parse Buildah's host variables, we have to pass them manually
       BUILDAH_INFO=$(buildah info)
       BUILDAH_OS=$(jq -r '.host.os' <<<"$BUILDAH_INFO")
@@ -665,6 +685,7 @@ spec:
       done
 
       DOCKERFILE_ARG_FLAGS+=("${BUILD_ARG_FLAGS[@]}")
+      DOCKERFILE_ARG_FLAGS+=("${ENV_FLAGS[@]}")
 
       dockerfile-json "${DOCKERFILE_ARG_FLAGS[@]}" "$dockerfile_copy" >/shared/parsed_dockerfile.json
       BASE_IMAGES=$(
@@ -700,6 +721,7 @@ spec:
       fi
 
       BUILDAH_ARGS+=("${BUILD_ARG_FLAGS[@]}")
+      BUILDAH_ARGS+=("${ENV_FLAGS[@]}")
 
       # Necessary for newer version of buildah if the host system does not contain up to date version of container-selinux
       # TODO remove the option once all hosts were updated
