--- a/task/buildah-min/0.8/buildah-min.yaml
+++ b/task/buildah-min/0.8/buildah-min.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: "0.8"
+    app.kubernetes.io/version: 0.8.1
     build.appstudio.redhat.com/build_type: docker
   name: buildah-min
 spec:
@@ -81,6 +81,10 @@ spec:
   - default: []
     description: Array of --build-arg values ("arg=value" strings)
     name: BUILD_ARGS
+    type: array
+  - default: []
+    description: Array of --env values ("env=value" strings)
+    name: ENV_VARS
     type: array
   - default: ""
     description: Path to a file with build arguments, see https://www.mankier.com/1/buildah-build#--build-arg-file
@@ -325,6 +329,8 @@ spec:
   - args:
     - --build-args
     - $(params.BUILD_ARGS[*])
+    - --env
+    - $(params.ENV_VARS[*])
     - --labels
     - $(params.LABELS[*])
     - --annotations
@@ -476,6 +482,7 @@ spec:
       echo 'root:1:4294967294' | tee -a /etc/subuid >> /etc/subgid
 
       build_args=()
+      env_vars=()
       if [ -n "${BUILD_ARGS_FILE}" ]; then
         # Parse BUILD_ARGS_FILE ourselves because dockerfile-json doesn't support it
         echo "Parsing ARGs from $BUILD_ARGS_FILE"
@@ -510,6 +517,11 @@ spec:
                   # we append BUILD_ARGS after the content of the BUILD_ARGS_FILE
                   while [[ $# -gt 0 && $1 != --* ]]; do build_args+=("$1"); shift; done
                   ;;
+              --env)
+                  shift
+                  # Collect env entries of the form KEY=value
+                  while [[ $# -gt 0 && $1 != --* ]]; do env_vars+=("$1"); shift; done
+                  ;;
               --labels)
                   shift
                   while [[ $# -gt 0 && $1 != --* ]]; do LABELS+=("--label" "$1"); shift; done
@@ -528,6 +540,11 @@ spec:
       BUILD_ARG_FLAGS=()
       for build_arg in "${build_args[@]}"; do
         BUILD_ARG_FLAGS+=("--build-arg=$build_arg")
+      done
+
+      ENV_FLAGS=()
+      for env_var in "${env_vars[@]}"; do
+        ENV_FLAGS+=("--env=$env_var")
       done
 
       # Dockerfile-json cannot parse Buildah's host variables, we have to pass them manually
@@ -550,6 +567,7 @@ spec:
       done
 
       DOCKERFILE_ARG_FLAGS+=("${BUILD_ARG_FLAGS[@]}")
+      DOCKERFILE_ARG_FLAGS+=("${ENV_FLAGS[@]}")
 
       dockerfile-json "${DOCKERFILE_ARG_FLAGS[@]}" "$dockerfile_copy" > /shared/parsed_dockerfile.json
       BASE_IMAGES=$(
@@ -586,6 +604,7 @@ spec:
       fi
 
       BUILDAH_ARGS+=("${BUILD_ARG_FLAGS[@]}")
+      BUILDAH_ARGS+=("${ENV_FLAGS[@]}")
 
       # Necessary for newer version of buildah if the host system does not contain up to date version of container-selinux
       # TODO remove the option once all hosts were updated
