feat(CLOUDDST-31731): replace skopeo+umoci with oc image extract
Replace the two-step image extraction process (skopeo copy + umoci unpack)
with a single oc image extract command for better efficiency.

--- a/stepactions/fips-operator-check-step-action/0.1/fips-operator-check-step-action.yaml
+++ b/stepactions/fips-operator-check-step-action/0.1/fips-operator-check-step-action.yaml
@@ -44,15 +44,13 @@ spec:
       counter_dir=$(mktemp -d)
       trap 'rm -rf "$counter_dir"' EXIT
 
-      # Function to clean up OCI image and unpacked directory
+      # Function to clean up extracted image directory
       cleanup_image_artifacts() {
         local image_num="$1"
         local component_label="$2"
         local version_label="$3"
         local release_label="$4"
-        # Clean up OCI image (may or may not exist depending on failure point)
-        rm -rf "/tekton/home/${image_num}-${component_label}-${version_label}-${release_label}:latest" 2>/dev/null || true
-        # Clean up unpacked directory (may or may not exist depending on failure point)
+        # Clean up extracted directory (may or may not exist depending on failure point)
         rm -rf "/tekton/home/unpacked-${image_num}-${component_label}-${version_label}-${release_label}" 2>/dev/null || true
       }
 
@@ -133,29 +131,25 @@ spec:
           echo "No digest found in sanitized image, using tag-based sanitization"
           sanitized_related_image=$(get_image_registry_repository_tag "${related_image}")
         fi
-        echo "Successfully sanitized image reference: ${sanitized_related_image}. Using sanitized image reference for conversion to OCI format"
+        echo "Successfully sanitized image reference: ${sanitized_related_image}. Using sanitized image reference for extraction"
 
-        # Convert image to OCI format since umoci can only handle the OCI format
-        if ! retry skopeo copy --remove-signatures "docker://${sanitized_related_image}" "oci:///tekton/home/${image_num}-${component_label}-${version_label}-${release_label}:latest"; then
-          echo -e "Error: Unable to scan image: Could not convert image ${related_image} to OCI format\n"
-          # Clean up any partial OCI image artifacts to prevent resource accumulation
+        # Create destination directory for extraction
+        extract_dir="/tekton/home/unpacked-${image_num}-${component_label}-${version_label}-${release_label}"
+        mkdir -p "${extract_dir}"
+
+        # Extract image filesystem directly using oc image extract
+        if ! retry oc image extract "${sanitized_related_image}" \
+            --path=/:"${extract_dir}" \
+            --confirm \
+            --preserve-ownership; then
+          echo -e "Error: Unable to scan image: Could not extract filesystem from ${related_image}\n"
+          # Clean up any partial extracted directory to prevent resource accumulation
           cleanup_image_artifacts "${image_num}" "${component_label}" "${version_label}" "${release_label}"
           echo "1" >> "${counter_dir}/error"
           return
         fi
 
-        # Unpack OCI image
-        if ! retry umoci raw unpack --rootless \
-            --image "/tekton/home/${image_num}-${component_label}-${version_label}-${release_label}:latest" \
-            "/tekton/home/unpacked-${image_num}-${component_label}-${version_label}-${release_label}"; then
-          echo -e "Error: Unable to scan image: Could not unpack OCI image ${related_image}\n"
-          # Clean up OCI image and any partial unpacked directory to prevent resource accumulation
-          cleanup_image_artifacts "${image_num}" "${component_label}" "${version_label}" "${release_label}"
-          echo "1" >> "${counter_dir}/error"
-          return
-        fi
-
-        # Run check-payload on the unpacked image
+        # Run check-payload on the extracted image
         # The check-payload command fails with exit 1 when the scan for an image is unsuccessful
         # or when the image is not FIPS compliant. Hence, count those as failures and not errors
         if ! check-payload scan local \
@@ -165,7 +159,7 @@ spec:
             --output-format=csv \
             --output-file="/tekton/home/report-${image_num}-${component_label}-${version_label}-${release_label}.csv"; then
           echo -e "check-payload scan failed for ${related_image}\n"
-          # Clean up OCI image and unpacked directory on scan failure to prevent resource accumulation
+          # Clean up extracted directory on scan failure to prevent resource accumulation
           cleanup_image_artifacts "${image_num}" "${component_label}" "${version_label}" "${release_label}"
           echo "1" >> "${counter_dir}/failure"
           return
@@ -175,12 +169,12 @@ spec:
           if grep -q -- "---- Successful run" "/tekton/home/report-${image_num}-${component_label}-${version_label}-${release_label}.csv"; then
             echo -e "check-payload scan was successful for ${related_image}\n"
             echo "1" >> "${counter_dir}/success"
-            # Clean up OCI image and unpacked directory on successful run to save space
+            # Clean up extracted directory on successful run to save space
             cleanup_image_artifacts "${image_num}" "${component_label}" "${version_label}" "${release_label}"
           elif grep -q -- "---- Successful run with warnings" "/tekton/home/report-${image_num}-${component_label}-${version_label}-${release_label}.csv"; then
             echo -e "check-payload scan was successful with warnings for ${related_image}\n"
             echo "1" >> "${counter_dir}/warnings"
-            # Clean up OCI image and unpacked directory on successful run with warnings to save space
+            # Clean up extracted directory on successful run with warnings to save space
             cleanup_image_artifacts "${image_num}" "${component_label}" "${version_label}" "${release_label}"
           fi
         fi
