exclude ec policy

--- a/policies/build-tasks.yaml
+++ b/policies/build-tasks.yaml
@@ -7,3 +7,6 @@ sources:
       - oci::quay.io/conforma/build-task-policy:latest
     data:
       - git::https://github.com/release-engineering/rhtap-ec-policy//data
+    config:
+      exclude:
+        - step_image_registries.step_images_permitted:quay.io/redhat-user-workloads/rhtap-build-tenant/konflux-build-cli:on-pr-cd0ef36d1914b30409b66575ce0b5a593d4788ed
