Pass arch parameter to Mobster on buildah tasks
This parameter will trigger the right SBOM filtering on multi-arch
builds. By using this parameter, we are overriding the architecture that
Mobster resolves during the pipeline execution.

Since the archful build is done on a remote host, the architecture of
the node running the build pipeline itself will always resolve to 'amd64'.

This param is only necessary in the remote variants of buildah. But,
since the remote variants are auto-generated from the standard tasks,
the param needs to be added there as well.

Signed-off-by: Bruno Pimentel <bpimente@redhat.com>

--- a/task/buildah-remote/0.8/buildah-remote.yaml
+++ b/task/buildah-remote/0.8/buildah-remote.yaml
@@ -737,6 +737,10 @@ spec:
       echo "[$(date --utc -Ins)] Setup prefetched"
 
       if [ -f "$(workspaces.source.path)/cachi2/cachi2.env" ]; then
+        # Identify the current arch to filter the prefetched content
+        PREFETCH_ARCH="$(uname -m)"
+        echo "$PREFETCH_ARCH" > /shared/prefetch-arch
+
         cp -r "$(workspaces.source.path)/cachi2" /tmp/
         chmod -R go+rwX /tmp/cachi2
         VOLUME_MOUNTS+=(--volume /tmp/cachi2:/cachi2)
@@ -1400,6 +1404,10 @@ spec:
 
       if [ "${CONTEXTUALIZE_SBOM}" == "true" ] && [ "${HERMETIC}" == "false" ]; then
         mobster_args+=(--contextualize)
+      fi
+
+      if [ -f "/shared/prefetch-arch" ]; then
+        mobster_args+=(--arch "$(cat /shared/prefetch-arch)")
       fi
 
       mobster "${mobster_args[@]}"
