test latest changes

--- a/task/init/0.3/init.yaml
+++ b/task/init/0.3/init.yaml
@@ -21,7 +21,7 @@ spec:
       description: NO_PROXY value for cache proxy (when enable-cache-proxy is true)
   steps:
     - name: init
-      image: quay.io/redhat-user-workloads/rhtap-build-tenant/konflux-build-cli:on-pr-cd0ef36d1914b30409b66575ce0b5a593d4788ed
+      image: quay.io/susdas/kbc:init
       computeResources:
         limits:
           memory: 256Mi
