use latest image

--- a/task/init/0.3/init.yaml
+++ b/task/init/0.3/init.yaml
@@ -21,7 +21,7 @@ spec:
       description: NO_PROXY value for cache proxy (when enable-cache-proxy is true)
   steps:
     - name: init
-      image: quay.io/susdas/kbc:init
+      image: quay.io/susdas/kbc:latest
       computeResources:
         limits:
           memory: 256Mi
