--- a/stepactions/fips-operator-check-step-action/0.1/fips-operator-check-step-action.yaml
+++ b/stepactions/fips-operator-check-step-action/0.1/fips-operator-check-step-action.yaml
@@ -115,7 +115,7 @@ spec:
 
         # Sanitize component_label to prevent directory path issues
         # Replace problematic characters (/ \ : * ? " < > | and whitespace) with hyphens
-        sanitized_component_label=$(echo "${component_label}" | tr '/\\:*?"<>|[:space:]' '-')
+        sanitized_component_label=$(echo -n "${component_label}" | tr '/\\:*?"<>|[:space:]' '-')
         echo "Sanitized component label for path usage: ${component_label} -> ${sanitized_component_label}"
         component_label="${sanitized_component_label}"
 
