--- a/task/push-dockerfile/0.1/push-dockerfile.yaml
+++ b/task/push-dockerfile/0.1/push-dockerfile.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
     tekton.dev/tags: "image-build, appstudio"
+    build.appstudio.redhat.com/expires-on: 2026-03-01T00:00:00Z
   name: push-dockerfile
 spec:
   description: |-
