Fix wrong argument name
Signed-off-by: Chenxiong Qi <cqi@redhat.com>

--- a/task/push-dockerfile-oci-ta/0.2/push-dockerfile-oci-ta.yaml
+++ b/task/push-dockerfile-oci-ta/0.2/push-dockerfile-oci-ta.yaml
@@ -93,7 +93,7 @@ spec:
         - source
         - --context
         - $(params.CONTEXT)
-        - --dockerfile
+        - --containerfile
         - $(params.DOCKERFILE)
         - --image-url
         - $(params.IMAGE)
