--- a/task/push-dockerfile/0.2/push-dockerfile.yaml
+++ b/task/push-dockerfile/0.2/push-dockerfile.yaml
@@ -74,7 +74,7 @@ spec:
     - source
     - --context
     - "$(params.CONTEXT)"
-    - --dockerfile
+    - --containerfile
     - "$(params.DOCKERFILE)"
     - --image-url
     - $(params.IMAGE)
