change log to say ERROR instead of FAILURE

--- a/task/validate-fbc/0.1/validate-fbc.yaml
+++ b/task/validate-fbc/0.1/validate-fbc.yaml
@@ -322,7 +322,7 @@ spec:
           ls -l /usr/bin/opm*
 
           note="Step extract-and-validate failed: Required OPM binary ($OPM_VERSION_NAME) was not found in /usr/bin. Check available versions in the task log."
-          ERROR_OUTPUT=$(make_result_json -r FAILURE -t "$note")
+          ERROR_OUTPUT=$(make_result_json -r ERROR -t "$note")
           echo "${ERROR_OUTPUT}" | tee "$(results.TEST_OUTPUT.path)"
           exit 0
         fi
