Add Victoremepunto to owners of build-vm-image
Signed-off-by: Víctor M. Múgica <vmugicag@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -105,7 +105,7 @@
 /task/sealights-python-oci-ta      @ascerra @flacatus @psturc @Dannyb48
 
 # renovate groupName=build-vm-image
-/task/build-vm-image    @arewm @brianwcook @ralphbean @scoheb
+/task/build-vm-image    @Victoremepunto @arewm @brianwcook @ralphbean @scoheb
 
 # renovate groupName=opm
 /task/operator-sdk-generate-bundle  @gurnben @jbpratt
